# agenticbot

./: .env.example  .gitignore  README.md  REFACTORING_COMPLETE.md  gcpauth.py  main.py  pyproject.toml  test_clarification.py  test_cloud_functions_format.py  test_pricing_format.py
.streamlit/: config.toml
config/: query_examples.json  sample_questions.md  schema.json  service_mappings.json  systemcontext.md  systemcontext.md.backup  systemcontext.md.backup.1
docs/: adk_llm_driven_design.md
prompt/: gcp_pricing_agent_prompt.txt  orchestration_prompt.txt  query_execution_prompt.txt  query_planner_prompt.txt  response_agent_prompt.txt
scripts/: discover_schema.py  generate_context.py  generate_queries.py
src/agents/: gcp_pricing_agent.py  query_execution.py  query_planner.py  response_agent.py  supervisor.py  supervisor_demo.py  worker.py  worker_demo.py
src/agents/tools/: gcp_pricing_tools.py
src/database/: connector.py  connector_demo.py
src/ui/: agenticbot_streamlit.py  config.py  config.py.backup
src/utils/: accesscheck.py  gcpauth.py  query_logger.py
tests/: test_gcp_pricing_agent.py  test_query_execution_agent.py  test_query_planner_agent.py  test_response_agent.py  test_spervisor_agent_v1.py  test_supervisor_agent.py
