[project]
name = "agenticbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-auth>=2.41.1",
    "google-cloud-aiplatform>=1.121.0",
    "google-cloud-bigquery>=3.38.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
]
